--- a/twi/photos/templates/photos/index.html
+++ b/twi/photos/templates/photos/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 {% if user_information %}
+    <h2> Users Logins</h2>
     <ul>
     {% for user in user_information %}
-        <li><a href="/polls/{{ question.id }}/">{{ user.email_address }}</a></li>
+        <h2><li><a href="{% url 'photos:detail' user.id %}">{{ user.login }}</a></li></h2>
     {% endfor %}
     </ul>
 {% else %}
