--- a/twi/photos/templates/photos/detail.html
+++ b/twi/photos/templates/photos/detail.html
@@ -10,6 +10,14 @@
     <li>Email:  {{ user.email_address }}</li>
     <li>Password:  {{ user.password  }}</li>
 </ul>
+
+<form method="post" action="{% url 'photos:detail' user.id %}" enctype="multipart/form-data">
+  {% csrf_token %}
+   {{ form.as_p }}
+  <button type="submit">Upload</button>
+</form>
+
+
 </body>
 </html>
 
