--- a/twi/photos/templates/photos/index.html
+++ b/twi/photos/templates/photos/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'photos/style.css' %}">
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends "photos/base.html" %}
+{% block title %} Home page {% endblock %}
+
+{% block content %}
+
 {% if user_information %}
     <h2> Users Logins</h2>
     <ul>
@@ -17,5 +13,5 @@
 {% else %}
     <p>No users are available.</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
