--- a/twi/photos/templates/photos/base.html
+++ b/twi/photos/templates/photos/base.html
@@ -12,16 +12,16 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="">Главная</a>
+  <a class="navbar-brand" href="{% url 'photos:index'%}">Главная</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="">Кулинария</a></li>
-        <li class="nav-item"><a class="nav-link" href="">IT</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Машины</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Проект</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Боты</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Курсы</a></li>
     </ul>
   </div>
 </nav>
@@ -30,7 +30,7 @@
 
  <footer class="bg-light text-center text-lg-start">
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-       <h5> <a class="text-dark" href="https://github.com/DarkPrinceWarrior/GANs-in-web-app.git">
+       <h5> <a class="text-dark" href="https://github.com/DarkPrinceWarrior/Django_web.git">
             GitHub проекта</a></h5>
       </div>
     </footer>
