--- a/twi/photos/templates/photos/detail.html
+++ b/twi/photos/templates/photos/detail.html
@@ -12,7 +12,7 @@
 <form method="post" action="{% url 'photos:detail' user.id %}" enctype="multipart/form-data">
   {% csrf_token %}
    {{ form.as_p }}
-  <button type="submit">Upload</button>
+  <button class="button_upload" type="submit">Upload</button>
 </form>
 
 {% endblock %}
