--- a/twi/bot/templates/bot/base.html
+++ b/twi/bot/templates/bot/base.html
@@ -5,14 +5,14 @@
 <head>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'current_app/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bot/style.css' %}">
     <meta charset="UTF-8">
   <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="{% url 'current_app:index'%}">Главная</a>
+  <a class="navbar-brand" href="{% url 'bot:index'%}">Главная</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
