--- a/twi/bot/templates/bot/detail.html
+++ b/twi/bot/templates/bot/detail.html
@@ -1,4 +1,4 @@
-{% extends "current_app/base.html" %}
+{% extends "bot/base.html" %}
 {% block title %} user detail {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
     <li>Password:  {{ user.password  }}</li>
 </ul>
 
-<form method="post" action="{% url 'current_app:detail' user.id %}" enctype="multipart/form-data">
+<form method="post" action="{% url 'bot:detail' user.id %}" enctype="multipart/form-data">
   {% csrf_token %}
    {{ form.as_p }}
   <button class="button_upload" type="submit">Upload</button>
