--- a/twi/bot/templates/bot/base.html
+++ b/twi/bot/templates/bot/base.html
@@ -19,9 +19,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="">Проект</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Боты</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Курсы</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'bot:choose_bot'%}">Боты</a></li>
     </ul>
   </div>
 </nav>
